--- a/_posts/2022-08-26-starting.md
+++ b/_posts/2022-08-26-starting.md
@@ -29,102 +29,38 @@ author: sanghoon.lee
 
 ## 블로그를 개설하는 이유 ##
 
-그 첫 시작이 아마도 기술블로그의 개설이 될 것 같습니다. 기술블로그를 개설해서 운영하려는 이유는 `성장`과 `브랜드`라는 키워드로
+그 첫 시작이 아마도 기술블로그의 개설이 될 것 같습니다. 기술블로그를 개설해서 운영하려는 이유는 `성장`과 `정체성`라는 키워드로
 설명할 수 있을 것 같습니다.
 
+#### 성장 ####
+
 우리 개발팀에는 아직 부족한 부분이 많이 있습니다. 우리 스스로 부족한 부분을 채워나가면서 `성장`할 수 있는 발판을 마련해야 합니다.
+
  `성장`을 위해서 **소통**과 **공유**는 필수적 입니다. **소통**과 **공유**를 통해서 `성장`에 필요한 지식과 경험을 채워나갈 수
 있기 때문입니다. **소통**과 **공유**에 가장 기본적이면서 효율적인 수단이 바로 글쓰기입니다. 블로그를 통해서 공개적으로 배포할
 수 있도록 우리들의 생각이나 의견, 스스로 공부하거나 경험을 통해서 얻은 유용한 지식 등을 간결하고 명료하게 글로 꾸준히 작성해본다면 
-글쓰기 능력의 향상을 기대할 수 있을 것입니다. 글쓰기 능력의 향상이 타인과 **소통**하고 **공유**하는 힘을 키워주게 되면, 우리 스스로의
-`성장`으로까지 이어질 수 있습니다.
+글쓰기 능력의 향상으로 이어질 수 있을 것입니다. 적은 인원으로 효율적인 조직을 만들기 위해서는 무엇보다 협업이 중요합니다. 협업하기 위해서는 본인의 지식이나 경험, 생각 등을 잘 정리하여 
+상대방에게 전달할 수 있는 능력이 요구됩니다. 말로는 정보 전달의 한계가 있기에 글로 전달할 수 있어야 합니다. 구성원들 각자의 글쓰기 능력이 팀 
+전체의 역량과 효율성을 좌우하는 것입니다. 글쓰기 능력을 향상시켜서 타인과 **소통**하고 **공유**하는 힘을 키우고, 그것이 우리들을 `성장`으로
+이끌어 주기를 기대해봅니다.
 
-그리고 시간이 흐르면서 블로그에 올려진 글들은 자연스럽게 인터넷 검색을 통해서 노출이 되기 시작할 것입니다. 검색을 통해서 블로그로 유입된 
-사람들에게 우리가 작성했던 글들이 신뢰성을 줄 수 있을 것입니다. 이는 결국 우리만의 `브랜드`를 구축하는 일이 될 것입니다. 
+#### 정체성 ####
 
+우리가 근무하는 에어릭스라는 회사가 IT회사가 아니다보니 일반적인 IT기업의 조직문화와는 차이가 있습니다. 개발팀도 예외가 아닙니다.
+일반적인 IT기업의 개발팀과는 차이가 있습니다. 솔직히 개발팀다운 `정체성`을 아직 가지고 있지 못하다고 생각합니다.
 
-우리가 작성한 글들이
-누군가의 문제를 해결하는데 도움을 줄 수 있을 것이고, 잠재적인 고객한테 에어릭스라는 회사를 알리는 마케팅 채널로 역할을 하게 될
-수도 있을 것입니다. 그들이 인터넷 검색으로 노출된 글들을 
+기술은 빠르게 발전하고 있습니다. 기술의 발전 흐름에 뒤쳐지지 않고 쫓아가기 위해서라도 계속적으로 **공부**하고, **연구**하는 모습을 보여야 합니다. 
+그런 과정들 속에서 배우고, 고민하고, 경험한 것들을 개인의 기억속에만 남겨둔다면, 점차 시간이 흐르면서 기억의 소멸과 왜곡과 함께 그 소중한
+기억들의 많은 부분을 잃게 될 수도 있습니다. 
 
-또한, 블로그를 운영하면서 쌓여진 글들이 외부 사람에게 신뢰를 
+본인의 지식과 경험을 여러 사람들과 함께 나눌 수 있도록 글로 잘 정리해서 기술블로그에 올리다보면, 개인과 개발팀의 히스토리로 남을 수 있습니다.
+그리고 훗날 그것이 소중한 지식자산으로써 에어릭스라는 회사가 가지는 기술력의 자양분으로 사용될 것입니다.
+ 
+저는 이것이 에어릭스 환경시스템 사업부의 `개발팀`이 가져야 하는 모습이고, `정체성`이 되어야 한다고 생각합니다. 
 
-결국 외부의 타인에게 신뢰를 줄 수 있고 우리만의 `브랜드구축`될 수 있을 것입니다.
+## 블로그의 운영방향 ##
 
+---
 
-
-## 개발팀은 개발팀다워야 한다 ##
-
-블로그에 포스팅하는 것을 통해서 연습시킬 수 있습니다.
-
-그런 의미에서 저는 블로그가 그 발판이 되어줄 수도 있을 것이라고 생각하고 있습니다.
-
-
-
-
-개발팀다운 조직문화를 
-
-
-팀장으로써 개발팀에 개발팀다운 조직문화를 심어주고 싶습니다. 
-제가 생각하는 개발팀다운 조직문화라는 것은 `소통`, `공유`, `성장`이라는 키워드로 설명할 수 있을 것 같습니다. 
-
-
-먼저, `소통`은 어떤 주제나 현상에 대해서 사내/외 어느 누구와도 자유롭게 의견을 주고 받을 수 있는 것을 의미합니다. 그리고 가장 기본적으로
-요구되는 능력이 글쓰기 능력일 것입니다.
-
-
-, 자신이 경험하거나 공부하면서 알게된 유용한 지식을 잘 정리하여 공유하고, 결국 이런 과정의 반복 속에서 팀 구성원 모두가 스스로 
-성장해 나가는 자신의 모습을 볼 수 있어야 합니다.
-
-
-개발팀의 팀장으로써 우리팀에 개발팀다운 조직문화를 만들어주고 싶다는 
-
-
-
-IT기술에 대한 대부분의 사내 조직 구성원들의 이해가 부족할 수 밖에 없습니다.
-
-
-그래서 사실 일반적인 IT기업과는 다른 조직문화를 가지고 있는 것 같습니다. 임원진이나 타 부서의 많은 분들이 저희 개발팀을
-이해하지 못하고 있는 것처럼 저희도 사실 회사에 대해서 이해하지 못하는 부분이 많습니다.
-
-개발팀을 개발팀답게 만들고 싶습니다. 
-
-에어릭스
-
-과거 설익은 어설픈 기술을 과대포장하여 여러가지 문제가 많고 품질이 떨어지는 `스마트팩토리` 시스템을 구축하고 운영하도록 방조했던 과거의 인원들이
-물러나고 현재의 인원들로 대체되는 과정에서 많은 어려움들이 발생했었고, 잘 헤쳐왔다고 생각됩니다. 이제 과거의 잘못으로 발생했던 어려움들이 상당부분
-정리가 된 상태이니 한숨을 돌리고 새롭게 다시 시작해야 될 때라고 생각됩니다.
-
-당장 해야 할일도 많고, 하고 싶은 일도 많이 있습니다. 하지만 현재 우리 개발팀이 가진 역량과 경험이 많이 부족한 것 또한 현실입니다. 
-
-적은 인원과
-출중한 개발리더의 부재, 그리고 열정
-
-
- 개개인의 역량은 사실 한참 부족한 것이 사실입니다. 그만큼
-발전할 여지도 크다고 생각합니다. 문제는 우리 스스로 노력이 부족한 것이 
-
-
-
-상황 속에서 우리 개발팀 조직 전체의 역량을 어떻게 빠르게 키워나갈 수 있을가에 대한 고민을
-하게 되었습니다.
-
-어렵지만 구성원 개개인의  키워서 조직 전체의 역량을 키워내야만 한다고 생각합니다.
-
-우리가 근무하는 에어릭스는 IT기업이 아닙니다. 일반적인 IT기업의 조직문화와는 많이 다릅니다. IT기술에 대한 사내 조직 구성원들의 이해도 부족한 편입니다.
-IT기술을 활용한 사업은 수익은 커녕 수년간 적자가 지속되고 있습니다. 회사 차원에서의 전폭적인 지원을 받기는 여러가지로 어려운 상황입니다. 결국 소수의
-인원으로 최대한 효율적으로 움직일 수 있도록 우리 스스로의 역량을 키
-
-
-이런 현실을 벗어나기 위해서는 소수의 인원으로 효율적으로 움직여서 최대한의 성과를 창출할 수 밖에 없습니다. 결국 우리팀(기술연구소&개발팀)이 가진 역량을
-빠른 시간 내에 최대한 끌어올려야 한다고 생각했습니다.
-
-### 글쓰기의 중요성 ###
-
-
-`스마트팩토리` 시스템 구축에는 네트워크, 데이터베이스, 데이터분석, 빅데이터처리, AI, 웹, 보안, 어플리케이션 등  IT기술에 대한 지식뿐만
-아니라 센서/PLC,전기/전자, 무선통신, 대기환경 등과 같은 다양한 분야에 대한 지식도 함께 요구되기 때문입니다. 그리고 이러한 기술 지식에 우리가 구축할 
-시스템이 적용되어 운영될 제조 사업장에 대한 이해가 덧붙여지지 않은 상태에서 개발된 `스마트팩토리` 시스템은 결국 사용하기 불편하고, 효용성이
-떨어지는 반쪽짜리 시스템이 될 수 밖에 없다는 사실을 우리는 지난 경험을 통해서 너무나 잘 알고 있습니다.
-
-
+사용이 편리한 티스토리나 네이버 블로그를 이용해서 기술블로그를 운영할 수도 있었습니다. 하지만 요즘 핫한 IT스타트업들은 대부분 깃허브(github)를 이용해서 기술블로그를 운영하고 있습니다. 저희 에어릭스가 비록 IT기업은 아니지만, 그래도 우리 개발팀 인원들은 IT개발자들입니다. 그래서 우리가 운영하는 기술블로그만큼은
+여느 IT스타트업의 기술블로그와 마찮가지로 조금 더 개발자(?)스럽게 운영하고 싶었습니다. 
