--- a/_posts/2022-08-26-starting.md
+++ b/_posts/2022-08-26-starting.md
@@ -56,11 +56,27 @@ author: sanghoon.lee
 본인의 지식과 경험을 여러 사람들과 함께 나눌 수 있도록 글로 잘 정리해서 기술블로그에 올리다보면, 개인과 개발팀의 히스토리로 남을 수 있습니다.
 그리고 훗날 그것이 소중한 지식자산으로써 에어릭스라는 회사가 가지는 기술력의 자양분으로 사용될 것입니다.
  
-저는 이것이 에어릭스 환경시스템 사업부의 `개발팀`이 가져야 하는 모습이고, `정체성`이 되어야 한다고 생각합니다. 
+저는 이것이 에어릭스 환경시스템 사업부의 개발팀이 가져야 하는 모습이고, `정체성`이 되어야 한다고 생각합니다. 
 
-## 블로그의 운영방향 ##
+## 깃허브(github)를 선택한 이유 ##
 
 ---
 
-사용이 편리한 티스토리나 네이버 블로그를 이용해서 기술블로그를 운영할 수도 있었습니다. 하지만 요즘 핫한 IT스타트업들은 대부분 깃허브(github)를 이용해서 기술블로그를 운영하고 있습니다. 저희 에어릭스가 비록 IT기업은 아니지만, 그래도 우리 개발팀 인원들은 IT개발자들입니다. 그래서 우리가 운영하는 기술블로그만큼은
-여느 IT스타트업의 기술블로그와 마찮가지로 조금 더 개발자(?)스럽게 운영하고 싶었습니다. 
+사실 블로그를 운영할 플랫폼은 많이 있습니다. 사용이 편리한 티스토리나 네이버 블로그를 이용하는 것도 검토를 했었습니다. 하지만 요즘 웬만한 
+IT스타트업들이 하는 것처럼 깃허브(github)를 이용해서 기술블로그를 많이 운영하고 싶었습니다. 에어릭스가 비록 IT기업은 아니지만, 그래도 
+환경시스템 사업부의 개발팀에 소속된 우리들도 IT개발자들입니다. 우리가 운영하는 기술블로그만큼이라도 여느 IT스타트업들처럼 개발자스러움을 가득
+보여주고 싶습니다.
+
+## 글을 마치면서... ##
+
+---
+
+현재 우리의 기술수준은 여느 IT기업처럼 높은 수준이 아닙니다. 하지만 현재의 수준에서 배우고, 고민하고, 경험해나가는 있는 모습을 있는 
+그대로 꾸밈없이 블로그를 통해서 보여주고자 합니다. 시간이 흐르면서 점차 블로그에 올려놓은 글들이 인터넷 검색을 통해서 노출되기 시작할
+것입니다. 그렇게 검색된 글들이 에어릭스에 입사를 고민하는 구직자들에게 우리가 그 동안 노력해온 모습을 솔직하게 있는 그대로 보여줌으로써 
+회사에 대한 긍정적인 이미지를 심어줄 수 있을 것입니다. 우리와 비슷한 기술적인 문제를 가지고 고민하고 있던 사람들에게는 도움을 줄 수도 
+있을 것입니다. 잠재적인 고객에게는 우리의 제품과 기술을 홍보할 수 있는 채널역할을 할 수도 있을 것입니다.
+
+결국 이런것들이 쌓여가면서 에어릭스의 스마트팩토리 기술에 대한 `평가`와 `브랜드`가치를 높여줄 수 있지 않을까요?
+
+
