--- a/_posts/2022-08-26-starting.md
+++ b/_posts/2022-08-26-starting.md
@@ -39,10 +39,10 @@ author: sanghoon.lee
  `성장`을 위해서 **소통**과 **공유**는 필수적 입니다. **소통**과 **공유**를 통해서 `성장`에 필요한 지식과 경험을 채워나갈 수
 있기 때문입니다. **소통**과 **공유**에 가장 기본적이면서 효율적인 수단이 바로 글쓰기입니다. 블로그를 통해서 공개적으로 배포할
 수 있도록 우리들의 생각이나 의견, 스스로 공부하거나 경험을 통해서 얻은 유용한 지식 등을 간결하고 명료하게 글로 꾸준히 작성해본다면 
-글쓰기 능력의 향상으로 이어질 수 있을 것입니다. 적은 인원으로 효율적인 조직을 만들기 위해서는 무엇보다 협업이 중요합니다. 협업하기 위해서는 본인의 지식이나 경험, 생각 등을 잘 정리하여 
-상대방에게 전달할 수 있는 능력이 요구됩니다. 말로는 정보 전달의 한계가 있기에 글로 전달할 수 있어야 합니다. 구성원들 각자의 글쓰기 능력이 팀 
-전체의 역량과 효율성을 좌우하는 것입니다. 글쓰기 능력을 향상시켜서 타인과 **소통**하고 **공유**하는 힘을 키우고, 그것이 우리들을 `성장`으로
-이끌어 주기를 기대해봅니다.
+글쓰기 능력의 향상으로 이어질 수 있을 것입니다. 적은 인원으로 효율적인 조직을 만들기 위해서는 무엇보다 협업이 중요합니다. 
+협업하기 위해서는 본인의 지식이나 경험, 생각 등을 잘 정리하여 상대방에게 전달할 수 있는 능력이 기본적으로 요구됩니다. 
+말로는 정보 전달의 한계가 있기에 글로 전달할 수 있어야 합니다. 구성원들 각자의 글쓰기 능력이 팀 전체의 역량과 효율성을 좌우하는 것입니다. 
+글쓰기 능력을 향상시켜서 타인과 **소통**하고 **공유**하는 힘을 키우고, 그것이 우리들을 `성장`으로 이끌어 주기를 기대해봅니다.
 
 #### 정체성 ####
 
@@ -50,13 +50,19 @@ author: sanghoon.lee
 일반적인 IT기업의 개발팀과는 차이가 있습니다. 솔직히 개발팀다운 `정체성`을 아직 가지고 있지 못하다고 생각합니다.
 
 기술은 빠르게 발전하고 있습니다. 기술의 발전 흐름에 뒤쳐지지 않고 쫓아가기 위해서라도 계속적으로 **공부**하고, **연구**하는 모습을 보여야 합니다. 
-그런 과정들 속에서 배우고, 고민하고, 경험한 것들을 개인의 기억속에만 남겨둔다면, 점차 시간이 흐르면서 기억의 소멸과 왜곡과 함께 그 소중한
-기억들의 많은 부분을 잃게 될 수도 있습니다. 
+그런 과정들 속에서 배우고, 고민하고, 경험한 것들을 개인의 기억속에만 남겨둔다면, 점차 시간이 흐르면서 기억이 지식으로 축적되지 못하고 결국
+사라지거나 왜곡되고 말 것입니다.
 
-본인의 지식과 경험을 여러 사람들과 함께 나눌 수 있도록 글로 잘 정리해서 기술블로그에 올리다보면, 개인과 개발팀의 히스토리로 남을 수 있습니다.
-그리고 훗날 그것이 소중한 지식자산으로써 에어릭스라는 회사가 가지는 기술력의 자양분으로 사용될 것입니다.
- 
-저는 이것이 에어릭스 환경시스템 사업부의 개발팀이 가져야 하는 모습이고, `정체성`이 되어야 한다고 생각합니다. 
+**공부**하고 **연구**하는 과정들 속에서 배우고, 고민하고, 경험한 것들 속에는 분명 타인에게 도움이 될 수 있는 정보들이 많이 포함되어
+있을 것입니다. 기억속 여기저기에 흩어져있는 단편적인 정보들을 잘 취합하고, 정리해서 유용한 지식으로 전환해내기 위해서 글로 작성해보려는
+노력을 기울일 필요가 있습니다. 그런 노력들이 모여서 에어릭스 환경시스템 사업부 소속 기술연구소&개발팀의 기술 히스토리로 내재화될 것입니다.
+기술 히스토리의 내재화가 없다는 것은 결국 그 조직은 내실이 없다는 의미입니다. 지금까지 우리 기술연구소&개발팀의 모습이 그랬던 것 같습니다.
+
+물론 한순간에 내실있는 조직으로 탈바꿈하는 건 당연히 불가능한 일입니다. 당연히 시간이 필요합니다. 하지만 마냥 기다릴 수도 없습니다.
+바로 시작해야 합니다. 성장에 대한 욕구가 있다면 바쁘다는 것이 핑계가 되지는 않을 것입니다. 
+
+**공부**와 **연구**를 게을리하지 말고, 꾸준히 기술 히스토리를 쌓으면서 개인과 조직이 함께 발전할 수 있는 그런 문화가 만들어졌으면 합니다. 
+그런 문화를 가진 조직이 제가 생각하는 개발팀다운 `정체성`을 가진 조직이기도 합니다.
 
 ---
 
