--- a/_posts/2022-08-26-starting.md
+++ b/_posts/2022-08-26-starting.md
@@ -69,9 +69,11 @@ author: sanghoon.lee
 ## 깃허브(github)를 선택한 이유 ##
 
 사실 블로그를 운영할 플랫폼은 많이 있습니다. 사용이 편리한 티스토리나 네이버 블로그를 이용하는 것도 검토를 했었습니다. 하지만 요즘 웬만한 
-IT스타트업들이 하는 것처럼 깃허브(github)를 이용해서 기술블로그를 많이 운영하고 싶었습니다. 에어릭스가 비록 IT기업은 아니지만, 그래도 
-환경시스템 사업부의 개발팀에 소속된 우리들도 IT개발자들입니다. 우리가 운영하는 기술블로그만큼이라도 여느 IT스타트업들처럼 개발자스러움을 가득
-보여주고 싶습니다.
+IT스타트업들이 하는 것처럼 깃허브(github)를 이용해서 기술블로그를 많이 운영하고 싶었습니다. 깃허브가 주는 개발자스러운 느낌을 에어릭스
+환경시스템사업부 기술블로그에서도 풍기고 싶었습니다.
+
+에어릭스가 비록 IT기업은 아니지만, 그래도 환경시스템 사업부의 개발팀에 소속된 우리들은 모두 IT개발자들입니다. 
+우리가 운영하는 기술블로그만큼에서라도 여느 IT스타트업들처럼 개발자스러움을 가득 보여주고 싶습니다.
 
 ![Image Alt github](/img/posts/starting_02.png)
 
