feat : 포스팅 수정

--- a/_posts/2022-08-26-starting.md
+++ b/_posts/2022-08-26-starting.md
@@ -16,9 +16,8 @@ author: sanghoon.lee
 
 ## 변화가 필요한 시점 ##
 
-에어릭스는 IT기업이 아닙니다. 그러다보니 IT기술이나 사업에 대한 사내 구성원들의 이해도가 부족한 편입니다. 말만 하면 모든 것들이 알아서 마법처럼 구현될 수 있는 것이 아닌데, IT기술에 대한 무지로 잘못된 의사결정을 내리는 경우가 많았습니다. 내부 인력의 투입없이도 
-100% 외주 인력을 써서 우리가 당초에 구상했던 시스템 구축이 가능할 것이라는 위험한 생각으로 무리하게 추진했던 많은 사업들 때문에 저도
-입사 후 최근까지도 문제들을 수습하는데 많은 에너지를 쏟아야만 했습니다. 그러는 동안 답답한 현실의 벽에 부딪혀 개발인력들의 이탈이 이어지기도 했었습니다.   
+에어릭스는 IT기업이 아닙니다. 그러다보니 IT기술이나 사업에 대해서 전반적으로 사내 구성원들의 이해도가 부족한 편입니다. 말만 하면 모든 것들이 알아서 마법처럼 구현될 수 있는 것이 아닌데, IT기술에 대한 이해도가 높지 않다보니 잘못된 의사결정을 내리는 경우가 많았습니다. 면밀한 검토없이 잘못된 의사결정으로 무리하게 추진되었던 많은 사업들 때문에 저도 입사 후 최근까지도 그러한 문제들을 수습하는데 많은 에너지를 쏟아야만 했습니다. 
+답답한 현실의 벽에 부딪혀 개발인력들의 이탈이 이어지는 것을 막을 수도 없었습니다.
 
 ![Image Alt 인력이탈](/img/posts/starting_01.png)
 
@@ -37,9 +36,9 @@ author: sanghoon.lee
 우리 개발팀에는 아직 부족한 부분이 많이 있습니다. 우리 스스로 부족한 부분을 채워나가면서 `성장`할 수 있는 발판을 마련해야 합니다.
 
  `성장`을 위해서 **소통**과 **공유**는 필수적 입니다. **소통**과 **공유**를 통해서 `성장`에 필요한 지식과 경험을 채워나갈 수
-있기 때문입니다. **소통**과 **공유**에 가장 기본적이면서 효율적인 수단이 바로 글쓰기입니다. 블로그를 통해서 공개적으로 배포할
-수 있도록 우리들의 생각이나 의견, 스스로 공부하거나 경험을 통해서 얻은 유용한 지식 등을 간결하고 명료하게 글로 꾸준히 작성해본다면 
-글쓰기 능력의 향상으로 이어질 수 있을 것입니다. 
+있기 때문입니다. **소통**과 **공유**에 가장 기본적이면서 효율적인 수단이 바로 글쓰기입니다. 기술블로그를 통해서 공개적으로 배포할
+수 있도록 어떤 주제에 대한 자신의 생각이나 의견, 지식 등을 간결하고 명료하게 글로 작성해보는 것은 글쓰기 능력을 향상시키는데
+많은 도움이 될 것이라고 생각합니다.   
 
 적은 인원으로 효율적인 조직을 만들기 위해서는 무엇보다 협업이 중요합니다. 
 협업하기 위해서는 본인의 지식이나 경험, 생각 등을 잘 정리하여 상대방에게 전달할 수 있는 능력이 기본적으로 요구됩니다. 
@@ -69,8 +68,6 @@ author: sanghoon.lee
 바로 시작해야 합니다. 성장에 대한 욕구가 있다면 바쁘다는 것이 핑계가 되지는 않을 것입니다. 다만, 옛날 시골마당에서 수동 펌프에 물이 안나올 때에
 물을 끌어올리기 위해서 펌프 위에 마중물을 부었던 것처럼 우리에게도 마중물 같은 것이 필요할 수는 있다고 생각합니다. 그리고 저는 기술블로그가 
 그 역할을 해줄 수 있을 것이라고 생각합니다.
-
-
 
 ---
 
